# atlasrag

./: .env.example  .env.external-postgres.example  .env.prod.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.node  Dockerfile.redis  Dockerfile.stunnel  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.ec2.override.yml  docker-compose.external-postgres.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.venv-pypi/: pyvenv.cfg
Test/: notes.md
atlasrag.xcodeproj/: project.pbxproj
cli/: lib.js
deploy/: Caddyfile
docs/: README.md  agents.md  bring-your-own-postgres.md  cost.md  enterprise.md  good-first-issues.md  hosted.md  hybrid-retrieval.md  retrieval-correctness.md  self-hosting.md  setup-modes.md
experiments/: README.md
gateway/: TELEMETRY.md  ai.js  answer.js  auth.js  chunk.js  db.js  enterprise_auth.js  hybrid_retrieval.js  index.js  lifecycle_policy.js  memory_reflect.js  memory_value.js  metrics.js  model_catalog.js  model_config.js  openapi.json  package-lock.json  package.json  plugins  provider_clients.js  retrieval_eval.js  retrieval_planner.js  schema.sql  security.js  sso.js  storage_billing.js  tcp.js  telemetry.js
mini_redis.xcodeproj/: project.pbxproj
scripts/: backup_all.sh  (+11 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/examples/: basic.py  ingest_folder.py  memory.py
sdk/python/src/supavector/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+117 files in other folders)
