[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supavector"
version = "0.2.0"
description = "SupaVector Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "SupaVector" }
]
keywords = ["supavector", "rag", "retrieval", "memory", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]

[project.urls]
Homepage = "https://github.com/Emmanuel-Bamidele/supavector"
Documentation = "https://github.com/Emmanuel-Bamidele/supavector/tree/main/sdk/python"
Repository = "https://github.com/Emmanuel-Bamidele/supavector"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
supavector = ["py.typed"]
